
syntax = "proto3";
package v1;
option go_package = "github.com/cossim/coss-server/service/relation/api/v1";

message CreateDialogRequest {
  //  @inject_tag: json:"owner_id"
  string OwnerId = 1;
  //  @inject_tag: json:"type"
  uint32 Type = 2;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 3;
}

message CreateDialogResponse {
  //  @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;
  //  @inject_tag: json:"type"
  uint32 Type = 3;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;
}


message JoinDialogRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message JoinDialogResponse {}


message GetUserDialogListRequest {
  //  @inject_tag: json:"user_id"
  string UserId = 1;
}
message GetUserDialogListResponse {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}

message GetDialogByIdsRequest {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}
message GetDialogByIdsResponse {
  //  @inject_tag: json:"dialogs"
  repeated Dialog Dialogs = 1;
}

message Dialog {
  //  @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;
  //  @inject_tag: json:"type"
  uint32 Type = 3;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;
}


message GetDialogUsersByDialogIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message GetDialogUsersByDialogIDResponse {
  //  @inject_tag: json:"user_ids"
  repeated string UserIds = 1;
}


message DeleteDialogByIdsRequest {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}
message DeleteDialogByIdsResponse {}


message DeleteDialogByIdRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message DeleteDialogByIdResponse {}


message DeleteDialogUsersByDialogIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message DeleteDialogUsersByDialogIDResponse {}

message GetDialogUserByDialogIDAndUserIdRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message GetDialogUserByDialogIDAndUserIdResponse {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
  //  @inject_tag: json:"is_show"
  uint32 IsShow = 3;
  //  @inject_tag: json:"top_at"
  uint64 TopAt = 4;
}

message DeleteDialogUserByDialogIDAndUserIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message DeleteDialogUserByDialogIDAndUserIDResponse {}


message GetDialogByGroupIdRequest {
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 1;
}
message GetDialogByGroupIdResponse {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 2;
}


service DialogService {
  rpc CreateDialog(CreateDialogRequest) returns (CreateDialogResponse) {}
  rpc JoinDialog(JoinDialogRequest) returns (JoinDialogResponse) {}
  rpc GetUserDialogList(GetUserDialogListRequest) returns (GetUserDialogListResponse) {}
  rpc GetDialogByIds(GetDialogByIdsRequest) returns (GetDialogByIdsResponse) {}
  rpc GetDialogUsersByDialogID(GetDialogUsersByDialogIDRequest) returns (GetDialogUsersByDialogIDResponse) {}
  rpc GetDialogUserByDialogIDAndUserID(GetDialogUserByDialogIDAndUserIdRequest) returns (GetDialogUserByDialogIDAndUserIdResponse) {}
  rpc GetDialogByGroupId(GetDialogByGroupIdRequest) returns (GetDialogByGroupIdResponse) {}

  rpc DeleteDialogByIds(DeleteDialogByIdsRequest) returns (DeleteDialogByIdsResponse) {}
  rpc DeleteDialogById(DeleteDialogByIdRequest) returns (DeleteDialogByIdResponse) {}
  rpc DeleteDialogUsersByDialogID(DeleteDialogUsersByDialogIDRequest) returns (DeleteDialogUsersByDialogIDResponse) {}
  rpc DeleteDialogUserByDialogIDAndUserID(DeleteDialogUserByDialogIDAndUserIDRequest) returns (DeleteDialogUserByDialogIDAndUserIDResponse) {}
}